<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:startDestination="@id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.bagoy.mydicodingapp.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_upcoming"
        android:name="com.bagoy.mydicodingapp.ui.upcoming.UpcomingFragment"
        android:label="@string/title_Upcoming"
        tools:layout="@layout/fragment_upcoming">
        <action
            android:id="@+id/action_navigation_upcoming_to_navigation_home"
            app:destination="@id/navigation_home" />
    </fragment>

    <fragment
        android:id="@+id/navigation_finished"
        android:name="com.bagoy.mydicodingapp.ui.finished.FinishedFragment"
        android:label="@string/title_Finished"
        tools:layout="@layout/fragment_finished">
        <action
            android:id="@+id/action_navigation_finished_to_navigation_home"
            app:destination="@id/navigation_home" />
    </fragment>

    <fragment
        android:id="@+id/navigation_favorite"
        android:name="com.bagoy.mydicodingapp.ui.favorite.FavoriteFragment"
        android:label="@string/title_Favorite"
        tools:layout="@layout/fragment_favorite">
        <action
            android:id="@+id/action_navigation_favorite_to_navigation_home"
            app:destination="@id/navigation_home" />
    </fragment>

    <fragment
        android:id="@+id/navigation_setting"
        android:name="com.bagoy.mydicodingapp.ui.setting.SettingFragment"
        android:label="@string/setting"
        tools:layout="@layout/fragment_setting">
        <action
            android:id="@+id/action_navigation_setting_to_navigation_home"
            app:destination="@id/navigation_home" />
    </fragment>

</navigation>
