<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".ui.setting.SettingFragment">

    <!-- Dark Mode Option -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:gravity="center_vertical">

        <!-- Dark Mode Icon -->
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/baseline_dark_mode_24"
            android:contentDescription="@string/dark_mode_icon_desc"
            android:layout_marginEnd="16dp"
            app:tint="?attr/colorControlNormal" />

        <!-- Dark Mode Texts -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dark_mode"
                android:textStyle="bold"
                android:textSize="16sp"
                android:fontFamily="sans-serif-medium"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dark_mode_description"
                android:textSize="14sp"
                android:fontFamily="sans-serif"/>
        </LinearLayout>

        <!-- Dark Mode Switch -->
        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switch_dark_mode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:indeterminateTint="?attr/colorSwitchThumbNormal"/>

    </LinearLayout>

    <!-- Divider -->
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gray_500"/>

    <!-- Notification Option -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:gravity="center_vertical">

        <!-- Notification Icon -->
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/baseline_notifications_24"
            android:contentDescription="@string/notification_icon_desc"
            android:layout_marginEnd="16dp"
            app:tint="?attr/colorControlNormal" />

        <!-- Notification Texts -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/notifications"
                android:textSize="16sp"
                android:textStyle="bold"
                android:fontFamily="sans-serif-medium"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/notifications_description"
                android:textSize="14sp"
                android:fontFamily="sans-serif"/>
        </LinearLayout>

        <!-- Notification Switch -->
        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switch_notifications"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:indeterminateTint="?attr/colorSwitchThumbNormal"/>
    </LinearLayout>

</LinearLayout>
