<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone"
        android:indeterminateTint="?attr/colorSecondaryVariant" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <androidx.appcompat.widget.SearchView
                android:id="@+id/searchView"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/rounded_search_view"
                android:iconifiedByDefault="false"
                android:padding="8dp"
                android:queryHint="@string/searchbar_hint" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dicoding_event_tittle"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/upcoming_events_tittle"
                android:textSize="18sp"
                android:layout_marginTop="16dp" />

            <TextView
                android:id="@+id/textViewNoEvents2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tidak_ada_acara_ditemukan"
                android:visibility="gone"
                android:textSize="16sp"
                android:textColor="@android:color/darker_gray"
                android:layout_gravity="left"
                tools:ignore="RtlHardcoded" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerViewUpcomingEvents"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:clipToPadding="false"
                android:paddingBottom="8dp"
                android:nestedScrollingEnabled="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/finished_events_tittle"
                android:textSize="18sp"
                android:layout_marginTop="9dp" />

            <TextView
                android:id="@+id/textViewNoEvents"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tidak_ada_acara_ditemukan"
                android:visibility="gone"
                android:textSize="16sp"
                android:textColor="@android:color/darker_gray"
                android:layout_gravity="left"
                tools:ignore="RtlHardcoded" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerViewFinishedEvents"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:clipToPadding="false"
                android:nestedScrollingEnabled="true"
                android:paddingBottom="56dp" />

        </LinearLayout>
    </ScrollView>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        app:menu="@menu/bottom_nav_menu" />
</androidx.coordinatorlayout.widget.CoordinatorLayout>
